# friend-reminder

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  debug.sh  fly.toml  jobs.cron  manage.py  pyproject.toml  run.sh  supervisord.conf
apps/guest_user/migrations/: 0001_initial.py
apps/webpush/migrations/: 0001_initial.py
friend_reminder/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
main/: admin.py  context_processors.py  forms.py  models.py  views.py
main/management/commands/: sendreminders.py
main/migrations/: 0001_make_friend_model.py  0002_userpreferences.py  0003_friend_next_reminder.py  0004_friend_log.py  0005_userpreferences_stripe_customer_id_and_more.py  0006_alter_userpreferences_stripe_customer_id.py  0007_remove_userpreferences_subscribed_and_more.py
main/templates/: base.html  friend.html  home.html  subscribe.html
main/templates/guest_user/: convert_form.html
main/templates/registration/: login.html
