[tool.poetry]
name = "friend-reminder"
version = "0.1.0"
description = ""
authors = ["Alex Sadler <alexandersadler1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
